--- a/style.css
+++ b/style.css
@@ -64,18 +64,19 @@
     padding: 3rem 3rem 1rem 3rem;
   }
   .logo-image{
-    width:80px;
+    width:100px;
     height: 30px;
     justify-content: flex-start;
   }
   
   .links{
-    display: FLEX;
-    padding-left: calc(var(--default--padding)*10);
+    display: flex;
+    padding-left: calc(var(--default--padding)*11);
     gap:2rem;
-    font-size: calc(var(--font-size-15)/1.4);
-    font-weight: var(--font-weight-regular);
+    font-size: calc(var(--font-size-10));
+    font-weight: var(--font-weight-medium);
     font-family: var(--font-family-open-sans);
+    color: var(--Desaturated-Blue);
   }
   .biolinks:hover{
     color: var(--Moderate-Cyan);
@@ -100,14 +101,20 @@
   }
   
   .firstinfo{
-    padding-top: calc(var(--default--padding)*2);
-    width: 500px;
+    padding-top: calc(var(--default--padding));
+    width: 50%;
+    
+  }
+  .firstimg{
+    width: 50%;
   }
   .sectionexplanation{
-    line-height: 1.2rem;
+    line-height: 1.4rem;
+    font-size:var(--font-size-10);
     font-family: var(--font-family-open-sans);
     font-weight: var(--font-weight-regular);
     padding-top: 1rem;
+    color: var(--Desaturated-Blue);
  }
  .textarea{
     display: flex;
@@ -122,11 +129,19 @@
   width: 150px;
   height: 30px;
   border-radius: 4px;
+  font-size: calc(var(--font-size-10)/1.3);
  }
   .typeemail{
     resize: none;
     width: 300px;
     height: 30px;
+  }
+  .typeemail::placeholder{
+  font-weight:50;
+  font-family: var(--font-family-open-sans);
+  font-size: var(--font-size-5);
+  padding: 1rem;
+  opacity: 0.5;
   }
   .errormessage{
     color: red;
@@ -135,10 +150,11 @@
   .curveimg{
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: 200%;
     z-index: -1;
   }
   .sectiontwo{
+    padding-top: 6rem;
     position: relative;
     z-index: 1;
     display: flex;
@@ -156,19 +172,30 @@
     font-size: 24px;
   }
   .secondexplanation{
+    color: var(--Desaturated-Blue);
     font-family: var(--font-family-open-sans);
     font-weight: var(--font-weight-medium);
-    font-size: 12px;
+    font-size: 12px;   
+    width: 70%;   
+  }
+  .first{
     padding-top: 1.5rem;
+  }
+  .second{
+    padding-top:0.5rem;
   }
   a.seelink{
       font-family: var(--font-family-open-sans);
       font-weight: var(--font-weight-medium);
-      font-size: 16px;
+      font-size: 12px;
       color: var(--Moderate-Cyan);   
   }
+  .iconarrow{
+    height: 12px;
+    padding-left: 0.2rem;
+  }
   .fyloworklink {
-    padding-top: 1.5rem;
+    padding-top: 1rem;
     display: inline-flex;
     align-items: center;
     border-bottom: 1.5px solid;
@@ -176,7 +203,7 @@
     padding-bottom: 2px;
 }
 .ceoword{
-  width: 400px;
+  width: 300px;
   height: 200px;
   background-color: var(--Light-Grayish-Blue);
   margin-top: 2rem;
@@ -190,31 +217,40 @@ border-radius: 30px;
 }
 .ceoinfo{
   display: flex;
-  align-items: center;  
+  align-items: center; 
+  padding-top: 1rem; 
 }
 .ceosec{
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  line-height: 1rem;
+  padding-left: 0.7rem;
+
 }
 .ceoname {
   font-weight: bold; 
+  font-size: 0.8rem;
 }
 
 .ceoposition {
   margin-top: 0;
+  font-size: 0.6rem;
+  font-weight: 400;
 }
 
 .word{
       font-family: var(--font-family-open-sans);
       font-weight: var(--font-weight-medium);
-      font-size: 16px;
-      color: black;
+      font-size: 12px;
+      letter-spacing: 0.05rem;
+      color: var(--Desaturated-Blue);
+      line-height: 1rem;
 }
 
 .contacts{
   background-color: var(--Desaturated-Blue);
- margin-top: 3rem;
+ margin-top: 8rem;
   height: 200px;
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -267,7 +303,7 @@ footer{
   height: 50px;
 }
 .aboutfooter ,.contactsfooter ,.socialfooter{
-  padding-top: 3rem;
+  padding-top: 4rem;
   width: 100px;
 }
 .aboutfooter ,.contactsfooter{
@@ -296,4 +332,7 @@ padding-top: 0.5rem;
 }
 .socialfooter{
   letter-spacing: 0.5rem;
+}
+.author{
+  padding-left: 50%;
 }
